==========

1.??.? -

	Re-fix NPE when toggling HTTP Engine V2
	Fix global custom MEncoder options
	Fix startup for symlinked PMS.sh (#1356) (thanks, Matthijs!)
	Added documentation to PMS.conf (thanks, Hagar!)
	Updated JNA to support multiarch directories on Linux (#1152)
	Added GUI support for right-to-left languages
	Language updates:
		- added Arabic
		- added Hebrew (thanks, zvi-yamin!)

1.52.1 - 2012-04-06

	Updated MPlayer to SB29 which fixes AC3 audio sync
	Allow JRE 6 instead of just JRE 7
	Language updates:
		- added Turkish (thanks, BrYaNT!)
		- updated Bulgarian (thanks, JORDITO!)
		- updated Catalan (thanks, aseques!)
		- updated Czech (thanks, valib!)
		- updated English labels
	Reading genre from media (thanks, nielsb!)

1.52.0 - 2012-03-22

	Fix program starting on Linux
	Support videos with resolutions that are not divisible by 4
	Improved overscan-compensation
	Fixed the display of Hebrew subtitles
	Improvements to logging
	Language updates:
		- Czech (thanks, valib!)

1.51.0 - 2012-03-17

	Fix StartStopListener callbacks for HTTP Engine V1
	Surface playback start/stop events
	Make video quality presets localizable
	Fixed OSX log message about font definitions
	Fixed double wrapping of streams causing stuttering
	Added MPEG4 ASP with Qpel support for PS3
	Allow 15fps video
	MediaInfo link added to the About tab
	Updated to latest versions of libraries (codec, jdom, logback and slf4j)
	Various stability and speed improvements
	Updated JRE autodownload to 7u3 from 7u2
	Updated MPlayer and MEncoder to SB28
	Updated ImageMagick Convert to 6.7.6
	Updated MediaInfo to 0.7.54
	More reliable selection of correct audio channels
	Improved fast-forward and rewind support

1.50.1 - 2012-01-28

	Fixed DLNAResource cloning problem (#1274)
	Added renderer configuration file for Philips TV (thanks, leroy!)
	Fixed bug in RootFolder (#1243)
	Improved child discovery for the root folder
	Enhanced network interface handling (#659)
	Fixed bug in Navigation Share tab