@@ -150,6 +150,19 @@ maximumbitrate = 110
 # the server hibernating or sleeping while it is streaming data.
 #prevents_sleep_mode = false
 
+# GUI Option: Default renderer when automatic detection fails (selector)
+# PMS can recognize many renderers automatically. Sometimes a renderer will
+# connect the PMS does not recognize. This option defines which renderer PMS
+# should assume. Default value is empty, which means PMS will assume the
+# "Unknown renderer".
+#renderer_default =
+
+# GUI Option: Force default renderer (disable automatic detection) (toggle)
+# By default PMS tries to automatically detect what renderers try to connect
+# to it. By settings this option to true, PMS will assume any renderer that
+# connects is the default renderer.
+#renderer_force_default = false
+
 # ---< Plugins >--------------------------------------------------------------
 #
 # incomplete - no information available
@@ -164,7 +177,7 @@ maximumbitrate = 110
 # Generate Thumbnails
 # -------------------
 # GUI Option: Generate Thumbnails
-# Set whether or not to generate thumbnails of medai files for the client.
+# Set whether or not to generate thumbnails of media files for the client.
 thumbnails = true
 
 # Thumbnail seeking position
@@ -318,7 +331,7 @@ folders =
 
 
 # ----------------------------------------------------------------------------
-# Transconder Settings
+# Transcoder Settings
 # ----------------------------------------------------------------------------
 
 # Transcoder engines
