@@ -82,6 +82,17 @@
 		<dt>Prevent OS from sleeping when streaming</dt>
 		<dd>Checking this checkbox will make sure that the computer will
 			not go to standby mode while streaming.</dd>
+
+		<dt>Default renderer when automatic detection fails</dt>
+		<dd>PMS can recognize many renderers automatically. Sometimes a renderer will
+			connect the PMS does not recognize. This option defines which renderer PMS
+			should assume.</dd>
+
+		<dt>Force default renderer (disable automatic detection)</dt>
+		<dd>By default PMS tries to automatically detect what renderers try to connect
+			to it. By settings this option to true, PMS will assume any renderer that
+			connects is the default renderer.</dd>
+
 	</dl>
 
 
