@@ -150,6 +150,8 @@ public class PmsConfiguration {
 	private static final String KEY_PLUGIN_DIRECTORY = "plugins";
 	private static final String KEY_PREVENTS_SLEEP = "prevents_sleep_mode";
 	private static final String KEY_PROFILE_NAME = "name";
+	private static final String KEY_RENDERER_DEFAULT = "renderer_default";
+	private static final String KEY_RENDERER_FORCE_DEFAULT = "renderer_force_default";
 	private static final String KEY_PROXY_SERVER_PORT = "proxy";
 	private static final String KEY_SERVER_HOSTNAME = "hostname";
 	private static final String KEY_SERVER_PORT = "port";
@@ -334,15 +336,37 @@ public class PmsConfiguration {
 		}
 	}
 
+	/**
+	 * Default constructor that will attempt to load the PMS configuration file
+	 * from the profile path.
+	 *
+	 * @throws ConfigurationException
+	 * @throws IOException
+	 */
 	public PmsConfiguration() throws ConfigurationException, IOException {
+		this(true);
+	}
+
+	/**
+	 * Constructor that will initialize the PMS configuration.
+	 *
+	 * @param loadFile Set to true to attempt to load the PMS configuration
+	 * 					file from the profile path. Set to false to skip
+	 * 					loading.
+	 * @throws ConfigurationException
+	 * @throws IOException
+	 */
+	public PmsConfiguration(boolean loadFile) throws ConfigurationException, IOException {
 		configuration = new PropertiesConfiguration();
 		configuration.setListDelimiter((char) 0);
 		configuration.setFileName(PROFILE_PATH);
 
-		File pmsConfFile = new File(PROFILE_PATH);
-
-		if (pmsConfFile.exists() && pmsConfFile.isFile()) {
-			configuration.load(PROFILE_PATH);
+		if (loadFile) {
+			File pmsConfFile = new File(PROFILE_PATH);
+	
+			if (pmsConfFile.exists() && pmsConfFile.isFile()) {
+				configuration.load(PROFILE_PATH);
+			}
 		}
 
 		tempFolder = new TempFolder(getString(KEY_TEMP_FOLDER_PATH, null));
@@ -2063,6 +2087,61 @@ public class PmsConfiguration {
 
 	public void setAudioResample(boolean value) {
 		configuration.setProperty(KEY_AUDIO_RESAMPLE, value);
+	}
+
+	/**
+	 * Returns the name of the renderer to fall back on when header matching
+	 * fails. PMS will recognize the configured renderer instead of "Unknown
+	 * renderer". Default value is "", which means PMS will return the unknown
+	 * renderer when no match can be made.
+	 *
+	 * @return The name of the renderer PMS should fall back on when header
+	 * 			matching fails.
+	 * @see #isRendererForceDefault()
+	 */
+	public String getRendererDefault() {
+		return getString(KEY_RENDERER_DEFAULT, "");
+	}
+
+	/**
+	 * Sets the name of the renderer to fall back on when header matching
+	 * fails. PMS will recognize the configured renderer instead of "Unknow
+	 * renderer". Set to "" to make PMS return the unknown renderer when no
+	 * match can be made.
+	 *
+	 * @param value The name of the renderer to fall back on. This has to be
+	 * 				<code>""</code> or a case insensitive match with the name
+	 * 				used in any render configuration file.
+	 * @see #setRendererForceDefault(boolean)
+	 */
+	public void setRendererDefault(String value) {
+		configuration.setProperty(KEY_RENDERER_DEFAULT, value);
+	}
+
+	/**
+	 * Returns true when PMS should not try to guess connecting renderers
+	 * and instead force picking the defined fallback renderer. Default
+	 * value is false, which means PMS will attempt to recognize connecting
+	 * renderers by their headers.
+	 *
+	 * @return True when the fallback renderer should always be picked.
+	 * @see #getRendererDefault()
+	 */
+	public boolean isRendererForceDefault() {
+		return getBoolean(KEY_RENDERER_FORCE_DEFAULT, false);
+	}
+
+	/**
+	 * Set to true when PMS should not try to guess connecting renderers
+	 * and instead force picking the defined fallback renderer. Set to false
+	 * to make PMS attempt to recognize connecting renderers by their headers.
+	 *
+	 * @param value Set to true when the fallback renderer should always be
+	 *				picked.
+	 * @see #setRendererDefault(String)
+	 */
+	public void setRendererForceDefault(boolean value) {
+		configuration.setProperty(KEY_RENDERER_FORCE_DEFAULT, value);
 	}
 
 	public String getVirtualFolders() {
