@@ -192,6 +192,9 @@ NetworkTab.32=HTTP Engine V2
 NetworkTab.33=Prevent OS from sleeping while streaming
 NetworkTab.34=Plugins
 NetworkTab.35=Maximum bandwidth in Mb/s (0 means no limit):
+NetworkTab.36=Default renderer when automatic detection fails:
+NetworkTab.37=Unknown renderer
+NetworkTab.38=Force default renderer (disable automatic detection)
 PMS.0=No renderers were found
 PMS.1=Audio
 PMS.2=\#- Cache -\#
