@@ -28,6 +28,7 @@ import java.awt.event.ItemEvent;
 import java.awt.event.ItemListener;
 import java.awt.event.KeyEvent;
 import java.awt.event.KeyListener;
+import java.util.ArrayList;
 import java.util.List;
 import java.util.Locale;
 
@@ -46,6 +47,7 @@ import net.pms.Messages;
 import net.pms.PMS;
 import net.pms.configuration.Build;
 import net.pms.configuration.PmsConfiguration;
+import net.pms.configuration.RendererConfiguration;
 import net.pms.external.ExternalFactory;
 import net.pms.external.ExternalListener;
 import net.pms.network.NetworkConfiguration;
@@ -66,7 +68,7 @@ public class GeneralTab {
 	private static final Logger logger = LoggerFactory.getLogger(GeneralTab.class);
 
 	private static final String COL_SPEC = "left:pref, 2dlu, p, 2dlu , p, 2dlu, p, 2dlu, pref:grow";
-	private static final String ROW_SPEC = "p, 0dlu, p, 0dlu, p, 3dlu, p, 3dlu, p, 3dlu,p, 3dlu, p, 15dlu, p, 3dlu,p, 3dlu, p,  3dlu, p, 3dlu, p, 3dlu, p, 3dlu, p,3dlu, p, 3dlu, p, 15dlu, p,3dlu, p, 3dlu, p, 15dlu, p, 3dlu, p";
+	private static final String ROW_SPEC = "p, 0dlu, p, 0dlu, p, 3dlu, p, 3dlu, p, 3dlu,p, 3dlu, p, 15dlu, p, 3dlu,p, 3dlu, p,  3dlu, p, 3dlu, p, 3dlu, p, 3dlu, p,3dlu, p, 3dlu, p, 15dlu, p,3dlu, p, 3dlu, p, 3dlu, p, 3dlu, p, 15dlu, p, 3dlu, p";
 
 	private JCheckBox smcheckBox;
 	private JCheckBox autoUpdateCheckBox;
@@ -78,6 +80,7 @@ public class GeneralTab {
 	private JComboBox networkinterfacesCBX;
 	private JTextField ip_filter;
 	private JTextField maxbitrate;
+	private JComboBox renderers;
 	private JPanel pPlugins;
 	private final PmsConfiguration configuration;
 
@@ -337,12 +340,57 @@ public class GeneralTab {
 		});
 		builder.add(preventSleep, FormLayoutUtil.flip(cc.xyw(1, 37, 9), colSpec, orientation));
 
-		cmp = builder.addSeparator(Messages.getString("NetworkTab.34"), FormLayoutUtil.flip(cc.xyw(1, 39, 9), colSpec, orientation));
+		JCheckBox fdCheckBox = new JCheckBox(Messages.getString("NetworkTab.38"));
+		fdCheckBox.setContentAreaFilled(false);
+		fdCheckBox.addItemListener(new ItemListener() {
+			public void itemStateChanged(ItemEvent e) {
+				configuration.setRendererForceDefault((e.getStateChange() == ItemEvent.SELECTED));
+			}
+		});
+		
+		if (configuration.isRendererForceDefault()) {
+			fdCheckBox.setSelected(true);
+		}
+
+		builder.addLabel(Messages.getString("NetworkTab.36"), FormLayoutUtil.flip(cc.xy(1, 39), colSpec, orientation));
+		
+		ArrayList<RendererConfiguration> allConfs = RendererConfiguration.getAllRendererConfigurations();
+		ArrayList<Object> keyValues = new ArrayList<Object>();
+		ArrayList<Object> nameValues = new ArrayList<Object>();
+		keyValues.add("");
+		nameValues.add(Messages.getString("NetworkTab.37"));
+
+		if (allConfs != null) {
+			for (RendererConfiguration renderer : allConfs) {
+				if (renderer != null) {
+					keyValues.add(renderer.getRendererName());
+					nameValues.add(renderer.getRendererName());
+				}
+			}
+		}
+
+		final KeyedComboBoxModel renderersKcbm = new KeyedComboBoxModel(
+				(Object[]) keyValues.toArray(new Object[keyValues.size()]),
+				(Object[]) nameValues.toArray(new Object[nameValues.size()]));
+		renderers = new JComboBox(renderersKcbm);
+		renderers.setEditable(false);
+		String defaultRenderer = configuration.getRendererDefault();
+		renderersKcbm.setSelectedKey(defaultRenderer);
+
+		if (renderers.getSelectedIndex() == -1) {
+			renderers.setSelectedIndex(0);
+		}
+
+		builder.add(renderers, FormLayoutUtil.flip(cc.xyw(3, 39, 7), colSpec, orientation));
+
+		builder.add(fdCheckBox, FormLayoutUtil.flip(cc.xyw(1, 41, 9), colSpec, orientation));
+
+		cmp = builder.addSeparator(Messages.getString("NetworkTab.34"), FormLayoutUtil.flip(cc.xyw(1, 43, 9), colSpec, orientation));
 		cmp = (JComponent) cmp.getComponent(0);
 		cmp.setFont(cmp.getFont().deriveFont(Font.BOLD));
 
 		pPlugins = new JPanel(new GridLayout());
-		builder.add(pPlugins, FormLayoutUtil.flip(cc.xyw(1, 41, 9), colSpec, orientation));
+		builder.add(pPlugins, FormLayoutUtil.flip(cc.xyw(1, 45, 9), colSpec, orientation));
 
 		JPanel panel = builder.getPanel();
 
@@ -364,6 +412,47 @@ public class GeneralTab {
 		names.add(0, "");
 		final KeyedComboBoxModel networkInterfaces = new KeyedComboBoxModel(keys.toArray(), names.toArray());
 		return networkInterfaces;
+	}
+
+	/**
+	 * Add the renderer configuration selection after they have been intialized.
+	 */
+	public void addRenderers() {
+		ArrayList<RendererConfiguration> allConfs = RendererConfiguration.getAllRendererConfigurations();
+		ArrayList<Object> keyValues = new ArrayList<Object>();
+		ArrayList<Object> nameValues = new ArrayList<Object>();
+		keyValues.add("");
+		nameValues.add(Messages.getString("NetworkTab.37"));
+		
+		if (allConfs != null) {
+			for (RendererConfiguration renderer : allConfs) {
+				if (renderer != null) {
+					keyValues.add(renderer.getRendererName());
+					nameValues.add(renderer.getRendererName());
+				}
+			}
+		}
+		
+		final KeyedComboBoxModel renderersKcbm = new KeyedComboBoxModel(
+				(Object[]) keyValues.toArray(new Object[keyValues.size()]),
+				(Object[]) nameValues.toArray(new Object[nameValues.size()]));
+		renderers.setModel(renderersKcbm);
+		renderers.setEditable(false);
+		String defaultRenderer = configuration.getRendererDefault();
+		renderersKcbm.setSelectedKey(defaultRenderer);
+		
+		if (renderers.getSelectedIndex() == -1) {
+			renderers.setSelectedIndex(0);
+		}
+
+		renderers.addItemListener(new ItemListener() {
+			public void itemStateChanged(ItemEvent e) {
+				if (e.getStateChange() == ItemEvent.SELECTED) {
+					logger.info("Setting renderer default: \"" + renderersKcbm.getSelectedKey() + "\"");
+					configuration.setRendererDefault((String) renderersKcbm.getSelectedKey());
+				}
+			}
+		});
 	}
 
 	public void addPlugins() {
