@@ -22,14 +22,17 @@ package net.pms.test;
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertNotNull;
 
+import java.io.IOException;
 import java.util.HashMap;
 import java.util.Iterator;
 import java.util.Map;
 import java.util.Map.Entry;
 import java.util.Set;
 
+import net.pms.configuration.PmsConfiguration;
 import net.pms.configuration.RendererConfiguration;
 
+import org.apache.commons.configuration.ConfigurationException;
 import org.junit.Before;
 import org.junit.Test;
 import org.slf4j.LoggerFactory;
@@ -43,8 +46,8 @@ import ch.qos.logback.classic.LoggerContext;
 public class RendererConfigurationTest {
 	private final Map<String, String> testCases = new HashMap<String, String>();
 
-    @Before
-    public void setUp() {
+	@Before
+	public void setUp() {
         // Silence all log messages from the PMS code that is being tested
         LoggerContext context = (LoggerContext) LoggerFactory.getILoggerFactory();
         context.reset(); 
@@ -52,6 +55,7 @@ public class RendererConfigurationTest {
 		// Cases that are too generic should not match anything
 		testCases.put("User-Agent: UPnP/1.0 DLNADOC/1.50", null);
 		testCases.put("User-Agent: Unknown Renderer", null);
+		testCases.put("X-Unknown-Header: Unknown Content", null);
 		
 		// From AirPlayer.conf:
 		testCases.put("User-Agent: AirPlayer/1.0.09 CFNetwork/485.13.9 Darwin/11.0.0", "AirPlayer");
@@ -96,36 +100,104 @@ public class RendererConfigurationTest {
 		// From XBMC.conf:
 		testCases.put("User-Agent: XBMC/10.0 r35648 (Mac OS X; 11.2.0 x86_64; http://www.xbmc.org)", "XBMC");
 		testCases.put("User-Agent: Platinum/0.5.3.0, DLNADOC/1.50", "XBMC");
-
-    	// Initialize the RendererConfiguration
-    	RendererConfiguration.loadRendererConfigurations();
     }
 
-    /**
-     * Test the RendererConfiguration class and the consistency of the
-     * renderer .conf files it reads. This is done by feeding it known
-     * headers and checking whether it recognizes the correct renderer.
-     */
-    @Test
-    public void testKnownHeaders() {
-    	// Test all header test cases
-    	Set<Entry<String, String>> set = testCases.entrySet();
-    	Iterator<Entry<String, String>> i = set.iterator();
-    	
-    	while (i.hasNext()) {
-    		Entry<String, String> entry = (Entry<String, String>) i.next();
-   	    	testHeader(entry.getKey(), entry.getValue());
-    	}
-    }
-    
-    /**
-     * Test one particular header line to see if it returns the correct
-     * renderer. Set the correct renderer name to <code>null</code> to
-     * require that nothing matches at all.
-     *
-     * @param headerLine The header line to recognize.
-     * @param correctRendererName The name of the renderer. 
-     */
+	/**
+	 * Test the RendererConfiguration class and the consistency of the renderer
+	 * .conf files it reads. This is done by feeding it known headers and
+	 * checking whether it recognizes the correct renderer.
+	 */
+	@Test
+	public void testKnownHeaders() {
+		PmsConfiguration pmsConf = null;
+
+		try {
+			pmsConf = new PmsConfiguration(false);
+		} catch (IOException e) {
+			// This should be impossible since no configuration file will be loaded.
+		} catch (ConfigurationException e) {
+			// This should be impossible since no configuration file will be loaded.
+		}
+
+		// Initialize the RendererConfiguration
+		RendererConfiguration.loadRendererConfigurations(pmsConf);
+
+		// Test all header test cases
+		Set<Entry<String, String>> set = testCases.entrySet();
+		Iterator<Entry<String, String>> i = set.iterator();
+
+		while (i.hasNext()) {
+			Entry<String, String> entry = (Entry<String, String>) i.next();
+			testHeader(entry.getKey(), entry.getValue());
+		}
+	}
+
+	/**
+	 * Test recognition with a forced default renderer configured.
+	 */
+	@Test
+	public void testForcedDefault() {
+		PmsConfiguration pmsConf = null;
+
+		try {
+			pmsConf = new PmsConfiguration(false);
+		} catch (IOException e) {
+			// This should be impossible since no configuration file will be loaded.
+		} catch (ConfigurationException e) {
+			// This should be impossible since no configuration file will be loaded.
+		}
+
+		// Set default to Playstation 3
+		pmsConf.setRendererDefault("Playstation 3");
+		pmsConf.setRendererForceDefault(true);
+		
+		// Initialize the RendererConfiguration
+		RendererConfiguration.loadRendererConfigurations(pmsConf);
+
+		// Known and unknown renderers should always return default
+		testHeader("User-Agent: AirPlayer/1.0.09 CFNetwork/485.13.9 Darwin/11.0.0", "Playstation 3");
+		testHeader("User-Agent: Unknown Renderer", "Playstation 3");
+		testHeader("X-Unknown-Header: Unknown Content", "Playstation 3");
+	}
+
+	/**
+	 * Test recognition with a forced bogus default renderer configured.
+	 */
+	@Test
+	public void testBogusDefault() {
+		PmsConfiguration pmsConf = null;
+
+		try {
+			pmsConf = new PmsConfiguration(false);
+		} catch (IOException e) {
+			// This should be impossible since no configuration file will be loaded.
+		} catch (ConfigurationException e) {
+			// This should be impossible since no configuration file will be loaded.
+		}
+
+		// Set default to non existent renderer
+		pmsConf.setRendererDefault("Bogus Renderer");
+		pmsConf.setRendererForceDefault(true);
+		
+		// Initialize the RendererConfiguration
+		RendererConfiguration.loadRendererConfigurations(pmsConf);
+
+		// Known and unknown renderers should return "Unknown renderer"
+		testHeader("User-Agent: AirPlayer/1.0.09 CFNetwork/485.13.9 Darwin/11.0.0", "Unknown renderer");
+		testHeader("User-Agent: Unknown Renderer", "Unknown renderer");
+		testHeader("X-Unknown-Header: Unknown Content", "Unknown renderer");
+	}
+
+	/**
+	 * Test one particular header line to see if it returns the correct
+	 * renderer. Set the correct renderer name to <code>null</code> to require
+	 * that nothing matches at all.
+	 * 
+	 * @param headerLine
+	 *            The header line to recognize.
+	 * @param correctRendererName
+	 *            The name of the renderer.
+	 */
     private void testHeader(String headerLine, String correctRendererName) {
     	if (correctRendererName != null) {
     		// Header is supposed to match a particular renderer
@@ -157,8 +229,8 @@ public class RendererConfigurationTest {
 	    		// Match by additional header
 				RendererConfiguration rc = RendererConfiguration.getRendererConfigurationByUAAHH(headerLine);
 				assertEquals("Expected no matching renderer to be found for header \"" + headerLine
-						+ "\", instead renderer \"" + rc.getRendererName() + "\" was recognized.", null,
-						rc);
+						+ "\", instead renderer \"" + (rc != null ? rc.getRendererName() : "")
+						+ "\" was recognized.", null, rc);
 	    	}
     	}
     }
